# LocalFragNote

./: .gitignore  Cargo.toml  README.md  errors.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mts
core/: Cargo.toml
core/migrations/: V1__initial_schema.sql  V2__add_memo_location.sql  V3__add_fts_and_vector.sql  V4__fix_fts_triggers.sql  V5__add_review_module.sql  V6__add_tag_metadata.sql  V7__add_memo_parent_id.sql  V8__add_chat_session.sql
core/src/: attachment.rs  cache.rs  chat_session.rs  error.rs  lib.rs  markdown.rs  memo.rs  memo_relation.rs  migration.rs  reaction.rs  review.rs  setting.rs  store.rs  tag.rs  types.rs
core/tests/: crud.rs
docs/plans/: 2026-07-11-ai-chat-panel.md
docs/specs/: 2026-07-10-auto-tag-on-save.md  2026-07-11-ai-chat-panel-design.md
src/: App.tsx  connect.ts  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: embedding.rs  error.rs  file_storage.rs  lib.rs  main.rs  protocol.rs  state.rs  thumbnail.rs
src-tauri/src/ai/: llm_call.rs  mod.rs  provider.rs  sse.rs  tools.rs
src-tauri/src/commands/: ai_chat.rs  attachment.rs  chat_session.rs  document_summary.rs  import_export.rs  lan.rs  llm_runner.rs  mcp.rs  memo.rs  memo_relation.rs  mod.rs  reaction.rs  review.rs  setting.rs
src-tauri/src/lan/: auth.rs  client.rs  endpoint.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/llm_runner/: config.rs  mod.rs  runner.rs
src-tauri/src/mcp/: config.rs  error.rs  mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/tests/: lan_auth.rs  lan_integration.rs  lan_protocol.rs  review_core.rs
src/components/: MemoFilters.tsx  MemosLogo.tsx  Navigation.tsx  TagTree.tsx  (+5 more)
(+105 files in other folders)
